--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <link rel="stylesheet" href="index.css">
 <body>
-	
+	<canvas id="canvas1" width="640"height="640">
+		
+	</canvas>
 </body>
 <script src="index.js"></script>
 </html>
