--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
+<script src="index.js"></script>
 <link rel="stylesheet" href="index.css">
 <body>
 	<canvas id="canvas1" width="640"height="640">
 		
 	</canvas>
+	<div id="huiqi">悔棋</div>
+    <img src="hei.png" alt="">
+	
 </body>
-<script src="index.js"></script>
+
 </html>
