--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+<meta charset="UTF-8">
+<title>Document</title>
 </head>
 <script src="index.js"></script>
 <link rel="stylesheet" href="index.css">
 <body>
-	<canvas id="canvas1" width="640"height="640">
-		
-	</canvas>
-	<div id="huiqi">悔棋</div>
-    <img src="hei.png" alt="">
-	
+
+<canvas id="time"width="320"height="320"> 
+
+</canvas>
+<canvas id="canvas1" width="640"height="640">
+
+</canvas> 
+<canvas id="canvas2"width="640"height="640"></canvas> 
+<div id="huiqi">悔棋</div>
+<div id="clear">重新开始</div>
+<div id="item">开启时间</div>
+<div id="timeshow"></div>
+<div id="xinxi"></div>
 </body>
 
 </html>
